# labear

./: .gitignore  README.md  applience_ears.ipynb  pyproject.toml  requirements.txt  setup.py  soundrec.ipynb  speechbrain.ipynb
api/: .dockerignore  Dockerfile  README.md  api.py  fly.toml  pyproject.toml  test_api_submit.py
api/labear_api/: brain.py  cloud_connect.py  cloud_upload.py  ear.py  main.py  start.py  test_api_submit.py
api/labear_api/services/: monitor_checker.py
client/: README.md  buildozer.spec  main.py  pyproject.toml
client/application/: AudioMon.kv  AudioMon.py  audio_capture.py
client/eartools/: eartools.py
client/kivy/: AudioMon.kv  AudioMon.py  AudioRec.kv
client/rpi/: dockerfile  pyproject.toml  recorder.py
eartools/: eartools.py
kivy/: AudioMon.kv  AudioMon.py  AudioRecorderApp.py
notebooks/: finetune.ipynb  train.ipynb
