[tool.poetry]
name = "labear"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
aiofiles = "^23.2.1"
requests = "^2.31.0"
uvicorn = "^0.27.0.post1"
influxdb-client = "^1.40.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.7"
influxdb3-python = "^0.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
