[tool.poetry]
name = "labear_api"
version = "0.1.0"
description = ""
authors = ["Karl Jonas Riisnaes <jonas@Karls-MacBook-Pro.local>", "Chris <chris.the.marais@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
aiofiles = "^23.2.1"
requests = "^2.31.0"
uvicorn = "^0.27.0.post1"
influxdb-client = "^1.40.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.7"
influxdb3-python = "^0.3.6"
speechbrain = "^1.0.0"
torch = "^2.2.1"
torchaudio = "^2.2.1"
soundfile = "^0.12.1"
loguru = "^0.7.2"

[tool.poetry.scripts]
start = "labear_api.start:start"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
