[tool.poetry]
name = "labear_api"
version = "0.1.0"
description = ""
authors = ["Karl Jonas Riisnaes <jonas@Karls-MacBook-Pro.local>", "Chris <chris.the.marais@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
aiofiles = "^23.2.1"
requests = "^2.31.0"
uvicorn = "^0.27.0.post1"
jinja2 = "^3.1.3"
python-multipart = "^0.0.7"
influxdb3-python = "^0.3.6"
soundfile = "^0.12.1"
loguru = "^0.7.2"
google-cloud-storage = "^2.16.0"
influxdb-client = "^1.42.0"
pydub = "^0.25.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
speechbrain = "^1.0.0"
torch = "^2.2.1"
torchaudio = "^2.2.1"
ipython = "^8.26.0"
audiosegment = "^0.23.0"

[tool.poetry.scripts]
start = "labear_api.start:start"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
